--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/suggestion": "^3.19.0",
     "clsx": "^2.1.1",
     "electron-updater": "^6.7.3",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "mqtt": "^5.14.1",
     "react": "^18.2.0",
