--- a/config/electron-builder.json5
+++ b/config/electron-builder.json5
@@ -35,6 +35,14 @@
     "dist-electron",
     "package.json"
   ],
+  "publish": [
+    {
+      "provider": "github",
+      "owner": "thedongcc",
+      "repo": "Tcom",
+      "releaseType": "draft"
+    }
+  ],
   "extraResources": [
     {
       "from": "resources",
