--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v*' # 当推送以 v 开头的 tag (如 v0.0.1) 时触发
+  workflow_dispatch: # 允许手动触发构建
 
 permissions:
   contents: write # 显式授予创建 Release 和上传文件的权限
